Added database schema creation script and configured Spring data source

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=Koala_Kitchen_Creations
+
+spring.datasource.url=jdbc:mysql://localhost:3306/koala_kitchen_creations
+spring.datasource.username=userKoala
+spring.datasource.password=userKoalaPW
