Fix for tomcat error (increase max-part-count)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=userKoala
 spring.datasource.password=userKoalaPW
 
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# All fields in a multipart form count towards this
+server.tomcat.max-part-count=200
